--- a/demo/3.html
+++ b/demo/3.html
@@ -69,17 +69,15 @@
             height: 125px;
             background-color: var(--purple-dark);
             clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 50% 88%, 0% 100%);
-            display: flex;
             justify-content: center;
             align-items: center;
             z-index: 2;
             border-radius: 10px 10px 0px 0px;
         }
 
-        /* Automatic Map Path Animation */
         .map-svg {
-            width: 60px;
-            height: 85px;
+            width: 100px;
+            height: 100px;
         }
 
         .path-line {
@@ -90,7 +88,7 @@
             stroke-linejoin: round;
             stroke-dasharray: 300;
             stroke-dashoffset: 200;
-            animation: drawPath 1.5s ease forwards 0.5s;
+            animation: drawPath 0.9s ease forwards 0.1s;
         }
 
         @keyframes drawPath {
@@ -99,7 +97,6 @@
             }
         }
 
-        /* Automatic Bar Expansion */
         .brand-bar {
             height: 85px;
             width: 0;
@@ -122,10 +119,9 @@
         }
 
         .brand-text {
-            font-size: 42px;
+            font-size: 57px;
             font-weight: 900;
             color: #000;
-            padding-left: 45px;
             white-space: nowrap;
             opacity: 0;
             animation: fadeInText 0.5s ease forwards 1.8s;
@@ -137,7 +133,6 @@
             }
         }
 
-        /* --- CONTENT SECTION --- */
         #main-content {
             padding: 50px;
             text-align: center;
@@ -154,6 +149,11 @@
         .loaded #main-content {
             opacity: 1;
         }
+
+        .show-loader #preloader {
+            opacity: 1;
+            visibility: visible;
+        }
     </style>
 </head>
 
@@ -161,18 +161,19 @@
 
     <div id="preloader">
         <div class="logo-container">
-            <!-- <div class="bookmark-wrapper"> -->
             <div class="shadow-layer"></div>
             <div class="main-bookmark">
                 <svg class="map-svg" viewBox="0 0 100 100">
-                    <path class="path-line"
-                        d="M10,0  L10,70 A1 1,0,0 0 ,30 70      L30,70 L30,20 A1 1,0,0 1,50 20         L50,20 L50,80  A1 0.9,0,0 1 ,50 80    L62,80  L63,90              "
-                        stroke="blue" fill="none"></path>
-
-                    <circle cx="10" cy="0" r="5" fill="white" />
-                    <circle cx="90" cy="90" r="5" fill="white" />
-
-                    <!-- <circle cx="45" cy="16" r="3" fill="#5e1a84" /> -->
+                    <path class="path-line" d="
+    M10 0 L10 70
+    A10 10 0 0 0 30 70
+    L30 20
+    A10 10 0 0 1 50 20
+    L50 70
+    A16 9 0 0 0 70 80
+    A13 20 0 0 1 80 94
+    L100 95
+  " stroke="#0066ff" stroke-width="2" fill="none" />
                 </svg>
             </div>
         </div>
@@ -181,20 +182,50 @@
         </div>
     </div>
     </div>
-
     <div id="main-content">
-        <h1>Swagat hai Haproven par!</h1>
+        <h1>Swagat hai Haproven par!3</h1>
         <p>Aapki website ab puri tarah se load ho chuki hai.</p>
+
+        <a href="1.html" class="page-loader">3 Profile</a>
+        <a href="2.html" class="page-loader">3 Profile</a>
+        <a href="3.html" class="page-loader">3 Profile</a>
+
     </div>
 
     <script>
-        // Website load hone ke 3.5 second baad preloader ko hatane ke liye
         window.addEventListener('load', () => {
             setTimeout(() => {
                 document.body.classList.add('loaded');
-            }, 3500); // 3.5 seconds ka delay
+            }, 2600);
         });
     </script>
+
+    <script>
+        document.querySelectorAll('.page-loader').forEach(link => {
+            link.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                const url = this.getAttribute('href');
+                const preloader = document.getElementById('preloader');
+
+                // loader ko reset karne ke liye clone
+                const newPreloader = preloader.cloneNode(true);
+                preloader.parentNode.replaceChild(newPreloader, preloader);
+
+                // show loader
+                document.body.classList.remove('loaded');
+                document.body.classList.add('show-loader');
+
+                // next page
+                setTimeout(() => {
+                    window.location.href = url;
+                }, 2600);
+            });
+        });
+    </script>
+
+
+
 
 </body>
 
