--- a/index.html
+++ b/index.html
@@ -1,210 +1,319 @@
-<meta http-equiv="refresh" content="3">
-
-<!DOCTYPE html>
-<html lang="hi">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Haproven Preloader</title>
-  <style>
-    :root {
-      --purple-dark: #bc1be7;
-      --purple-light: #bc1be7;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
-
-    /* --- PRELOADER SCREEN --- */
-    #preloader {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #f8f9fa;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-      transition: opacity 0.5s ease, visibility 0.5s;
-    }
-
-    /* Logo Scale for Mobile */
-    .logo-container {
-      display: flex;
-      align-items: center;
-      transform: scale(0.8);
-    }
-
-    @media (min-width: 768px) {
-      .logo-container {
-        transform: scale(1.1);
-      }
-    }
-
-    /* --- LOGO DESIGN --- */
-    .bookmark-wrapper {
-      position: relative;
-      z-index: 10;
-    }
-
-    .shadow-layer {
-      position: absolute;
-      width: 90px;
-      height: 120px;
-      background-color: var(--purple-light);
-      top: -8px;
-      left: -12px;
-      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 50% 88%, 0% 100%);
-      z-index: 1;
-      border-radius: 10px 10px 0px 0px;
-    }
-
-    .main-bookmark {
-      position: relative;
-      width: 95px;
-      height: 125px;
-      background-color: var(--purple-dark);
-      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 50% 88%, 0% 100%);
-      /* display: flex; */
-      justify-content: center;
-      align-items: center;
-      z-index: 2;
-      border-radius: 10px 10px 0px 0px;
-    }
-
-    /* Automatic Map Path Animation */
-    .map-svg {
-      width: 100px;
-      height: 100px;
-    }
-
-    .path-line {
-      fill: none;
-      stroke: white;
-      stroke-width: 6;
-      stroke-linecap: round;
-      stroke-linejoin: round;
-      stroke-dasharray: 300;
-      stroke-dashoffset: 200;
-      animation: drawPath 0.9s ease forwards 0.1s;
-    }
-
-    @keyframes drawPath {
-      to {
-        stroke-dashoffset: 0;
-      }
-    }
-
-    /* Automatic Bar Expansion */
-    .brand-bar {
-      height: 85px;
-      width: 0;
-      background: white;
-      border: 6px solid var(--purple-dark);
-      border-left: none;
-      border-radius: 0 20px 20px 0;
-      margin-left: 10px;
-      display: flex;
-      align-items: center;
-      overflow: hidden;
-      z-index: 5;
-      animation: expandBar 1s cubic-bezier(0.77, 0, 0.175, 1) forwards 1.2s;
-    }
-
-    @keyframes expandBar {
-      to {
-        width: 310px;
-      }
-    }
-
-    .brand-text {
-      font-size: 57px;
-      font-weight: 900;
-      color: #000;
-      white-space: nowrap;
-      opacity: 0;
-      animation: fadeInText 0.5s ease forwards 1.8s;
-    }
-
-    @keyframes fadeInText {
-      to {
-        opacity: 1;
-      }
-    }
-
-    /* --- CONTENT SECTION --- */
-    #main-content {
-      padding: 50px;
-      text-align: center;
-      opacity: 0;
-      transition: opacity 1s ease;
-    }
-
-    /* Preloader hatne ke baad content dikhao */
-    .loaded #preloader {
-      opacity: 0;
-      visibility: hidden;
-    }
-
-    .loaded #main-content {
-      opacity: 1;
-    }
-  </style>
-</head>
+<link rel="stylesheet" href="style.css">
 
 <body>
-
-  <div id="preloader">
-    <div class="logo-container">
-      <!-- <div class="bookmark-wrapper"> -->
-      <div class="shadow-layer"></div>
-      <div class="main-bookmark">
-        <svg class="map-svg" viewBox="0 0 100 100">
-          <path class="path-line" d="
-    M10 0 L10 70
-    A10 10 0 0 0 30 70
-    L30 20
-    A10 10 0 0 1 50 20
-    L50 70
-    A16 9 0 0 0 70 80
-    A13 20 0 0 1 80 94
-    L100 95
-  " stroke="#0066ff" stroke-width="2" fill="none" />
-
+    <!-- Header -->
+    <header>
+        <div class="logo">SK</div>
+        <div class="hamburger" onclick="toggleMenu()">
+            <span></span><span></span><span></span>
+        </div>
+        <nav id="navbar">
+            <ul>
+                <li class="active" data-section="home"><i class="fas fa-home"></i> Home</li>
+                <li data-section="about"><i class="fas fa-user"></i> About</li>
+                <li data-section="projects"><i class="fas fa-code"></i> Projects</li>
+                <li data-section="skills"><i class="fas fa-cogs"></i> Skills</li>
+                <li data-section="contact"><i class="fas fa-envelope"></i> Contact</li>
+            </ul>
+        </nav>
+    </header>
 
 
-        </svg>
-      </div>
-    </div>
-    <div class="brand-bar">
-      <span class="brand-text">Haproven</span>
-    </div>
-  </div>
-  </div>
-  <button><a href="/make.html">open</a></button>
-  <div id="main-content">
-    <h1>Swagat hai Haproven par!</h1>
-    <p>Aapki website ab puri tarah se load ho chuki hai.</p>
-  </div>
+    <style>
+        /* base header */
+        header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 12px 20px;
+            background: #111;
+            color: #fff;
+            position: sticky;
+            top: 0;
+            z-index: 999;
+            position: fixed;
+            width: 100%;
+        }
 
-  <script>
-    // Website load hone ke 3.5 second baad preloader ko hatane ke liye
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        document.body.classList.add('loaded');
-      }, 2600); // 2 seconds ka delay
-    });
-  </script>
+        .logo {
+            font-size: 22px;
+            font-weight: 700;
+        }
+
+        /* hamburger */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            gap: 5px;
+            cursor: pointer;
+        }
+
+        .hamburger span {
+            width: 25px;
+            height: 3px;
+            background: #fff;
+            border-radius: 5px;
+        }
+
+        /* nav */
+        #navbar ul {
+            display: flex;
+            gap: 25px;
+            list-style: none;
+        }
+
+        #navbar li {
+            cursor: pointer;
+            font-size: 15px;
+        }
+
+        @media (min-width: 1000px) {
+            header {
+                display: none;
+            }
+        }
+
+        @media (max-width: 1000px) {
+            .sidebar {
+                display: none;
+            }
+
+            .main-content {
+                margin: 0%;
+            }
+        }
+
+        /* ================= MOBILE ================= */
+        @media (max-width: 1000px) {
+
+            .hamburger {
+                display: flex;
+            }
+
+
+            #navbar {
+                position: absolute;
+                top: 60px;
+                right: 0;
+                width: 220px;
+                background: #111;
+                transform: translateX(100%);
+                transition: 0.3s ease;
+            }
+
+            #navbar.active {
+                transform: translateX(0);
+            }
+
+            #navbar ul {
+                flex-direction: column;
+                gap: 0;
+            }
+
+            #navbar li {
+                padding: 14px 20px;
+                border-bottom: 1px solid #222;
+            }
+        }
+
+
+    </style>
+
+    <script>
+        function toggleMenu() {
+            document.getElementById("navbar").classList.toggle("active");
+        }
+    </script>
+
+
+
+
+
+
+    <aside class="sidebar">
+
+        <!-- Brand -->
+        <div class="sidebar-brand">
+            <h1 class="brand-title">Haproven</h1>
+            <p class="brand-tagline">Lorem ipsum dolor sit amet consectetur</p>
+        </div>
+
+        <!-- Navigation -->
+        <nav class="sidebar-nav">
+            <ul class="nav-list">
+                <li class="nav-item">Dashboard</li>
+                <li class="nav-item">Community</li>
+                <li class="nav-item">Projects</li>
+
+                <li class="nav-item has-submenu">
+                    Resources
+                    <ul class="submenu">
+                        <li>Docs</li>
+                        <li>Tutorials</li>
+                        <li>Blog</li>
+                        <li>Updates</li>
+                        <li>Support</li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
+        <!-- Social Links -->
+        <div class="sidebar-footer">
+            <hr>
+            <ul class="social-links">
+                <li>Instagram</li>
+                <li>YouTube</li>
+                <li>GitHub</li>
+            </ul>
+        </div>
+
+    </aside>
+
+    <main class="main-content">
+
+
+        <section class="hero-se">
+            <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-info-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                    <path
+                        d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
+                </svg>
+            </div>
+            <h1>Haproven</h1>
+            <div class="hero">
+                <div class="hero-left">
+                    <h2>Haproven Home Page</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Eveniet magnam asperiores tempora. Reiciendis est totam
+                        pariatur doloremque expedita eveniet voluptatem.
+                    </p>
+                    <button class="hero-btn">Get Started</button>
+                </div>
+                <div class="hero-right">
+                    <div class="hero-box">
+
+                        <svg width="400" height="300" viewBox="0 0 400 300" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M 50,50 L 50,220 C 55,230 95,230 105,220 L 105,100 C 120,60 165,80 160,110 L 160,200 C 150,260 200,210 220,250"
+                                stroke="blue" stroke-width="3" fill="none" stroke-linecap="round" />
+
+                            <text x="35" y="40" font-family="Arial" font-size="18" fill="blue">Hackthon</text>
+                            <text x="55" y="250" font-family="Arial" font-size="18" fill="blue">Project</text>
+                            <text x="120" y="65" font-family="Arial" font-size="18" fill="blue">Event</text>
+                            <text x="235" y="260" font-family="Arial" font-size="18" fill="blue"
+                                text-decoration="underline">Happroven</text>
+                        </svg>
+
+
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <div class="card-wrapper">
+            <div class="staky-card">
+                <p class="name">Name –</p>
+                <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+
+            <div class="staky-card">
+                <p class="name">Name –</p>
+                <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+
+            <div class="staky-card">
+                <p class="name">Name –</p>
+                <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
+            </div>
+        </div>
+
+
+
+
+        <section class="projects-section">
+            <h1 class="section-title">My Projects</h1>
+            <p class="section-subtitle">Some of my recent work</p>
+
+            <div class="projects-container">
+
+                <article class="project-card">
+                    <div class="project-img">
+                        <img src="6965.jpg" alt="Project 1">
+                        <div class="live-card">
+                            <p class="live">LIVE</p>
+                        </div>
+                    </div>
+                    <style>
+                        .live-card {
+                            position: relative;
+                            background: #eee;
+                        }
+
+                        .live {
+                            padding: 4px 14px;
+                            background: aqua;
+                            position: absolute;
+                            top: -12px;
+                            left: 20px;
+                            z-index: 999;
+                            border-radius: 20px;
+                            font-size: 14px;
+                            font-weight: 600;
+                        }
+                    </style>
+
+                    <div class="project-content">
+                        <h2>Project One</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Ad, voluptatibus?
+                        </p>
+                        <a href="#" class="project-btn">View Project</a>
+                    </div>
+                </article>
+
+                <article class="project-card">
+                    <div class="project-img">
+                        <img src="image.png" alt="Project 2">
+                        <div class="live-card">
+                            <p class="live">LIVE</p>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h2>Project Two</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Ad, voluptatibus?
+                        </p>
+                        <a href="#" class="project-btn">View Project</a>
+                    </div>
+                </article>
+
+                <article class="project-card">
+                    <div class="project-img">
+                        <img src="https://via.placeholder.com/400x250" alt="Project 3">
+                        <div class="live-card">
+                            <p class="live">LIVE</p>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h2>Project Three</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Ad, voluptatibus?
+                        </p>
+                        <a href="#" class="project-btn">View Project</a>
+                    </div>
+                </article>
+
+            </div>
+        </section>
+    </main>
+
 
 </body>
-
-</html>
-
-
-
